--- a/about.html
+++ b/about.html
@@ -6,10 +6,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Gramentheme">
-        <meta name="description" content="Cloudly - Sass And software Html Template">
+        <meta name="author" content="Zentrolix">
+        <meta name="description" content="Sobre Zentrolix: plataforma educativa en Argentina para aprender a elegir, configurar y optimizar servicios de juegos en la nube. Cursos y guías para principiantes.">
+        <meta name="keywords" content="Zentrolix, cursos, guías, juegos en la nube, cloud gaming, Argentina, aprender, principiantes, plataformas educativas">
         <!-- ======== Page title ============ -->
-        <title>Cloudly - Sass And software Html Template</title>
+        <title>Sobre el proyecto — Zentrolix</title>
         <!--<< Favcion >>-->
         <link rel="shortcut icon" href="assets/img/favicon.svg">
         <!--<< Bootstrap min.css >>-->
@@ -326,19 +327,19 @@
             <div class="container">
                 <div class="pp-page-heading">
                     <div class="pp-breadcrumb-sub-title">
-                        <h1 class="wow fadeInUp" data-wow-delay=".3s">About Us</h1>
+                        <h1 class="wow fadeInUp" data-wow-delay=".3s">Sobre el proyecto</h1>
                     </div>
                     <ul class="pp-breadcrumb-items wow fadeInUp" data-wow-delay=".5s">
                     <li>
                         <a href="index.html">
-                            Home
+                            Inicio
                         </a>
                     </li>
                     <li>
                         <i class="fa-solid fa-chevron-right"></i>
                     </li>
                     <li>
-                        About Us
+                        Sobre el proyecto
                     </li>
                   </ul>
                 </div>
@@ -353,35 +354,35 @@
                         <div class="col-lg-6">
                             <div class="pp-about-content">
                                 <div class="pp-section-title mb-0">
-                                    <span class="pp-sub-title pp-style-border wow fadeInUp">Who We Are</span>
+                                    <span class="pp-sub-title pp-style-border wow fadeInUp">Quiénes somos</span>
                                     <h2 class="wow fadeInUp" data-wow-delay=".3s">
-                                        Crafting Ideas into Digital Impact
+                                        Plataforma educativa para juegos en la nube
                                     </h2>
                                 </div>
                                 <p class="pp-text wow fadeInUp" data-wow-delay=".5s">
-                                  In vestibulum dui a odio pharetra, nec accumsan sapien consectetur. Pellentesque magna risus, volutpat a vestibulum ut, tempus et quam. Nulla vitae erat blandit, mattis nisl ut, venenatis enim. Maecenas tempus arcu tincidunt.
+  Zentrolix es una plataforma educativa argentina que ayuda a principiantes a elegir, configurar y optimizar servicios de juegos en la nube. Nuestra misión es hacer que el acceso a la tecnología en la nube sea fácil y comprensible para todos.
                                 </p>
                                 <div class="pp-about-item">
                                    <div class="pp-about-text wow fadeInUp" data-wow-delay=".3s">
                                     <h6>
                                         <img src="assets/img/home-1/icon/cheak.svg" alt="img">
-                                        Smart Automation
+                                        Guías paso a paso
                                     </h6>
                                     <p>
-                                        Streamline repetitive tasks and workflows with intelligent automation tools.
+                                        Materiales claros y fáciles de seguir para empezar desde cero.
                                     </p>
                                    </div>
                                    <div class="pp-about-text wow fadeInUp" data-wow-delay=".5s">
                                     <h6>
                                         <img src="assets/img/home-1/icon/cheak.svg" alt="img">
-                                        Powerful Automation
+                                        Comunidad y soporte
                                     </h6>
                                     <p>
-                                        Donec eu hendrerit lorem. In ultrices erat pulvinar venenatis auctor.
+                                        Recibe ayuda y comparte experiencias con otros usuarios.
                                     </p>
                                    </div>
                                 </div>
-                                <a href="about.html" class="pp-theme-btn wow fadeInUp" data-wow-delay=".3s">Discover More <i class="fa-solid fa-arrow-right-long"></i></a>
+                                <a href="service.html" class="pp-theme-btn wow fadeInUp" data-wow-delay=".3s">Ver cursos <i class="fa-solid fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -408,38 +409,38 @@
             <div class="container">
                 <div class="pp-section-title text-center">
                     <span class="pp-sub-title wow fadeInUp">
-                        HOW IT WORKS
+                        ¿Cómo funciona?
                         <span class="pp-style-2"></span>
                     </span>
                     <h2 class="text-white wow fadeInUp" data-wow-delay=".3s">
-                       Marketing Made Simple
+                       Aprende en 3 pasos sencillos
                     </h2>
                  </div>
                 <div class="row">
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".3s">
                         <div class="pp-how-work-items">
-                            <h6>STEP-01</h6>
-                            <h3> Track, Analyze & Optimize</h3>
+                            <h6>PASO 01</h6>
+                            <h3>Elige tu curso</h3>
                             <p>
-                                Aenean id est pellentesque, consequat sem et, viverra lacus. Aliquam tincidunt.
+                                Selecciona el tema que más te interesa y accede al contenido desde cualquier lugar.
                             </p>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".5s">
                         <div class="pp-how-work-items pp-style-2">
-                            <h6>STEP-02</h6>
-                            <h3>Insight. Action. Results.</h3>
+                            <h6>PASO 02</h6>
+                            <h3>Sigue las guías</h3>
                             <p>
-                                Mauris dignissim vel augue vel congue. Pellentesque sit amet metus tortor hendrerit.
+                                Sigue instrucciones claras y visuales para avanzar paso a paso.
                             </p>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".7s">
                         <div class="pp-how-work-items">
-                            <h6>STEP-03</h6>
-                            <h3>Monitor, Measure & Improve</h3>
+                            <h6>PASO 03</h6>
+                            <h3>Aplica y juega</h3>
                             <p>
-                                Donec eu hendrerit lorem. In ultrices erat pulvinar venenatis auctor.
+                                Aplica lo aprendido y disfruta de tus juegos favoritos en la nube.
                             </p>
                         </div>
                     </div>
@@ -466,26 +467,26 @@
                         <div class="col-lg-6">
                             <div class="pp-key-feature-content">
                                 <div class="pp-section-title mb-0">
-                                    <span class="pp-sub-title wow fadeInUp">KEY FEATURES</span>
+                                    <span class="pp-sub-title wow fadeInUp">CARACTERÍSTICAS CLAVE</span>
                                     <h2 class="wow fadeInUp" data-wow-delay=".3s">
-                                        Intuitive Campaign Editor
+                                        Materiales interactivos y soporte
                                     </h2>
                                 </div>
                                 <p class="pp-text wow fadeInUp" data-wow-delay=".5s">
-                                    Duis congue eget neque sit amet mollis. Aliquam auctor diam sit amet efficitur condimentum. Aliquam vitae scelerisque leo, eu vulputate felis.
+                                    Accede a recursos visuales, tutoriales en video y soporte personalizado para resolver tus dudas.
                                 </p>
                                 <ul class="pp-feature-list wow fadeInUp" data-wow-delay=".3s">
                                     <li>
-                                        Intuitive Drag & Drop Editor
+                                        Cursos para todos los niveles
                                     </li>
                                     <li>
-                                        Mobile-Responsive Design
+                                        Guías paso a paso
                                     </li>
                                     <li>
-                                        Undo/Redo & Version History
+                                        Comunidad de apoyo
                                     </li>
                                 </ul>
-                                <a href="contact.html" class="pp-theme-btn wow fadeInUp" data-wow-delay=".5s">Read More <i class="fa-solid fa-arrow-right-long"></i></a>
+                                <a href="contact.html" class="pp-theme-btn wow fadeInUp" data-wow-delay=".5s">Leer más <i class="fa-solid fa-arrow-right-long"></i></a>
                             </div>
                         </div>
                     </div>
@@ -501,13 +502,13 @@
                         <div class="col-lg-6">
                             <div class="pp-key-feature-content">
                                 <div class="pp-section-title mb-0">
-                                    <span class="pp-sub-title wow fadeInUp">KEY FEATURES</span>
+                                    <span class="pp-sub-title wow fadeInUp">OPINIONES</span>
                                     <h2 class="wow fadeInUp" data-wow-delay=".3s">
-                                        Data-Backed AI Insights
+                                        Lo que dicen nuestros usuarios
                                     </h2>
                                 </div>
                                 <p class="pp-text wow fadeInUp" data-wow-delay=".5s">
-                                   Donec eu hendrerit lorem. In ultrices erat pulvinar venenatis auctor. Fusce porta massa sit amet leo rutrum, id imperdiet diam pretium. quis lacinia dui.
+                                   “Gracias a Zentrolix, pude empezar a jugar en la nube sin complicaciones. Las guías son muy claras y el soporte excelente.”
                                 </p>
                                 <ul class="pp-feature-list wow fadeInUp" data-wow-delay=".3s">
                                     <li>
@@ -589,27 +590,25 @@
             </div>
         </section>
 
-        <!-- Pp-news Section2 Start --> 
+        <!-- Секция FAQ вместо блога -->
         <section class="pp-news-section-2 section-padding fix">
             <div class="container">
                 <div class="pp-section-title text-center">
-                    <span class="pp-sub-title pp-style-border wow fadeInUp">Our Blog</span>
+                    <span class="pp-sub-title pp-style-border wow fadeInUp">Nuestra misión</span>
                     <h2 class="wow fadeInUp" data-wow-delay=".3s">
-                        Latest Posts and Articles
+                        Lo que nos inspira en Zentrolix
                     </h2>
                 </div>
                 <div class="row">
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".3s">
                         <div class="pp-news-card-item-2">
                             <div class="pp-news-image">
-                                <img src="assets/img/home-2/news/news-1.jpg" alt="img">
-                                <span>Smart Business</span>
+                                <img src="assets/img/inner-page/faq.png" alt="img">
+                                <span>Accesibilidad</span>
                             </div>
                             <div class="pp-news-content">
                                 <h3>
-                                    <a href="news-details.html">
-                                        Work Smarter: Tools Driving the Future
-                                    </a>
+                                    Educación para todos
                                 </h3>
                                 <ul class="news-post">
                                     <li>
@@ -627,50 +626,32 @@
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".5s">
                         <div class="pp-news-card-item-2">
                             <div class="pp-news-image">
-                                <img src="assets/img/home-2/news/news-2.jpg" alt="img">
-                                <span>Business</span>
+                                <img src="assets/img/inner-page/faq.png" alt="img">
+                                <span>Comunidad</span>
                             </div>
                             <div class="pp-news-content">
                                 <h3>
-                                    <a href="news-details.html">
-                                        Elevating Marketing with Next-Gen Solutions
-                                    </a>
+                                    Apoyo y colaboración
                                 </h3>
-                                <ul class="news-post">
-                                    <li>
-                                        <i class="fa-regular fa-user"></i>
-                                        By Admin
-                                    </li>
-                                    <li class="pp-style-2">
-                                        <i class="fa-regular fa-calendar-days"></i>
-                                        Sep 30, 2025
-                                    </li>
-                                </ul>
+                                <p>
+                                    Fomentamos una comunidad donde los usuarios pueden compartir experiencias, ayudarse y crecer juntos en el mundo del cloud gaming.
+                                </p>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay=".7s">
                         <div class="pp-news-card-item-2">
                             <div class="pp-news-image">
-                                <img src="assets/img/home-2/news/news-3.jpg" alt="img">
-                                <span>Benefits</span>
+                                <img src="assets/img/inner-page/faq.png" alt="img">
+                                <span>Innovación</span>
                             </div>
                             <div class="pp-news-content">
                                 <h3>
-                                    <a href="news-details.html">
-                                        Clearing Up Automation Misunderstandings
-                                    </a>
+                                    Siempre actualizados
                                 </h3>
-                                <ul class="news-post">
-                                    <li>
-                                        <i class="fa-regular fa-user"></i>
-                                        By Admin
-                                    </li>
-                                    <li class="pp-style-2">
-                                        <i class="fa-regular fa-calendar-days"></i>
-                                        Sep 30, 2025
-                                    </li>
-                                </ul>
+                                <p>
+                                    Actualizamos nuestros cursos y guías para que siempre tengas acceso a la información más relevante sobre juegos en la nube.
+                                </p>
                             </div>
                         </div>
                     </div>
