--- a/contact.html
+++ b/contact.html
@@ -6,10 +6,11 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Gramentheme">
-        <meta name="description" content="Cloudly - Sass And software Html Template">
+        <meta name="author" content="Zentrolix">
+        <meta name="description" content="Contacto Zentrolix: plataforma educativa en Argentina para aprender sobre juegos en la nube. Dirección y correo: help@zentrolix.com, Obispo Trejo 864, Córdoba.">
+        <meta name="keywords" content="Zentrolix, contacto, juegos en la nube, cloud gaming, Argentina, aprender, principiantes, plataformas educativas">
         <!-- ======== Page title ============ -->
-        <title>Cloudly - Sass And software Html Template</title>
+        <title>Contacto — Zentrolix</title>
         <!--<< Favcion >>-->
         <link rel="shortcut icon" href="assets/img/favicon.svg">
         <!--<< Bootstrap min.css >>-->
@@ -324,19 +325,19 @@
             <div class="container">
                 <div class="pp-page-heading">
                     <div class="pp-breadcrumb-sub-title">
-                        <h1 class="wow fadeInUp" data-wow-delay=".3s">Contact Us</h1>
+                        <h1 class="wow fadeInUp" data-wow-delay=".3s">Contacto</h1>
                     </div>
                     <ul class="pp-breadcrumb-items wow fadeInUp" data-wow-delay=".5s">
                     <li>
                         <a href="index.html">
-                            Home
+                            Inicio
                         </a>
                     </li>
                     <li>
                         <i class="fa-solid fa-chevron-right"></i>
                     </li>
                     <li>
-                       Contact Us
+                        Contacto
                     </li>
                   </ul>
                 </div>
@@ -351,16 +352,16 @@
                         <div class="col-lg-5">
                             <div class="pp-contact-box-item">
                                 <h3>
-                                    Contact Informatlon
+                                    Información de contacto
                                 </h3>
                                 <div class="pp-contact-item">
                                     <div class="pp-icon">
                                         <i class="fa-regular fa-location-dot"></i>
                                     </div>
                                     <div class="pp-content">
-                                        <h4>Our Address</h4>
+                                        <h4>Dirección</h4>
                                         <p>
-                                            2464 Royal Ln. Mesa, New Jersey 45463.
+                                            Obispo Trejo 864, X5000 Córdoba, Argentina
                                         </p>
                                     </div>
                                 </div>
@@ -380,10 +381,10 @@
                                         <i class="fa-regular fa-envelope"></i>
                                     </div>
                                     <div class="pp-content">
-                                        <h4>Email Us</h4>
+                                        <h4>Correo electrónico</h4>
                                         <p>
-                                            <a href="mailto:info@exmple.com">
-                                                info@exmple.com
+                                            <a href="mailto:help@zentrolix.com">
+                                                help@zentrolix.com
                                             </a>
                                         </p>
                                     </div>
@@ -393,9 +394,9 @@
                         <div class="col-lg-7">
                             <div class="pp-contact-content">
                                 <h3>
-                                    Ready to Get Started?
+                                    ¿Listo para aprender sobre juegos en la nube?
                                 </h3>
-                                <form action="contact.php" id="contact-form1" method="POST" class="pp-contact-form-items">
+                                <form action="#" id="contact-form1" method="POST" class="pp-contact-form-items">
                                     <div class="row g-4">
                                         <div class="col-lg-6 wow fadeInUp" data-wow-delay=".5s">
                                             <div class="form-clt">
@@ -433,7 +434,7 @@
         <div class="pp-map-section">
             <div class="pp-map-items">
                 <div class="googpemap">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6678.7619084840835!2d144.9618311901502!3d-37.81450084255415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642b4758afc1d%3A0x3119cc820fdfc62e!2sEnvato!5e0!3m2!1sen!2sbd!4v1641984054261!5m2!1sen!2sbd" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps?q=Obispo+Trejo+864,+Córdoba,+Argentina&output=embed" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
@@ -445,17 +446,17 @@
                     <div class="pp-footer-newsletter">
                         <div class="pp-newsletter-content wow fadeInUp" data-wow-delay=".3s">
                             <h2>
-                                Take Your Business Higher — Today!
+                                ¡Únete a Zentrolix y aprende sobre juegos en la nube!
                             </h2>
                             <p>
-                                Empower your team with AI-driven tools that simplify tasks, boost productivity, and deliver real results. Start transforming your workflow 
+                                Recibe guías, novedades y consejos exclusivos. Deja tu e-mail y estarás al tanto!
                             </p>
                         </div>
                         <form action="#" class="wow fadeInUp" data-wow-delay=".5s">
                             <div class="form-clt">
-                                <input type="text" name="email" id="email" placeholder="Enter your mail">
+                                <input type="email" name="email" id="email" placeholder="Tu correo electrónico">
                                 <button type="submit" class="pp-theme-btn">
-                                   <i class="fa-solid fa-paper-plane"></i> Request a Demo
+                                   <i class="fa-solid fa-paper-plane"></i> Suscribirse
                                 </button>
                             </div>
                         </form>
@@ -470,7 +471,7 @@
                                 </div>
                                 <div class="pp-footer-content">
                                     <p>
-                                       Aliquam finibus odio sollicitudin vestibulum tincidunt. Nullam vel fringilla elit.auctor ut,cursus ut mauris.
+                                       Zentrolix — plataforma educativa en Argentina para aprender a elegir, configurar y optimizar servicios de juegos en la nube.
                                     </p>
                                     <div class="social-icon d-flex align-items-center">
                                         <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -484,32 +485,37 @@
                         <div class="col-xl-2 col-lg-4 col-md-6 col-sm-6 ps-lg-5 wow fadeInUp" data-wow-delay=".4s">
                             <div class="pp-footer-widget-items">
                                 <div class="pp-widget-head">
-                                    <h3>Quick Links</h3>
+                                    <h3>Enlaces rápidos</h3>
                                 </div>
                                 <ul class="pp-list-area">
                                     <li>
                                         <a href="index.html">
-                                            Home
+                                            Inicio
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="contact.html">
-                                            How It Works
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="contact.html">
-                                            Features
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="pricing.html">
-                                           Pricing
+                                        <a href="about.html">
+                                            Sobre el proyecto
                                         </a>
                                     </li>
                                     <li>
                                         <a href="service.html">
-                                         Service
+                                            Cursos
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="contact.html">
+                                            Contacto
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            Política de privacidad
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#">
+                                            Términos de uso
                                         </a>
                                     </li>
                                 </ul>
@@ -518,33 +524,14 @@
                         <div class="col-xl-2 col-lg-4 col-md-6 col-sm-6 ps-lg-5 wow fadeInUp" data-wow-delay=".6s">
                             <div class="pp-footer-widget-items">
                                 <div class="pp-widget-head">
-                                    <h3>Company</h3>
+                                    <h3>Contacto</h3>
                                 </div>
                                 <ul class="pp-list-area">
                                     <li>
-                                        <a href="contact.html">
-                                            Overview
-                                        </a>
+                                        <span>Obispo Trejo 864, X5000 Córdoba, Argentina</span>
                                     </li>
                                     <li>
-                                        <a href="contact.html">
-                                            Solutions
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="contact.html">
-                                          Tutorials
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="contact.html">
-                                           Contact Us
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="contact.html">
-                                            Partners
-                                        </a>
+                                        <a href="mailto:help@zentrolix.com">help@zentrolix.com</a>
                                     </li>
                                 </ul>
                             </div>
@@ -552,7 +539,7 @@
                         <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 ps-lg-2 wow fadeInUp" data-wow-delay=".8s">
                             <div class="pp-footer-widget-items">
                                 <div class="pp-widget-head">
-                                    <h3>Ready to Get Started?</h3>
+                                    <h3>¿Quieres aprender más?</h3>
                                 </div>
                                 <div class="pp-contact-info">
                                     <div class="pp-icon">
@@ -560,23 +547,19 @@
                                     </div>
                                     <div class="pp-content">
                                         <h6>
-                                            <a href="mailto:contact.tech@gmail.com">
-                                                contact.tech@gmail.com
-                                            </a> <br>
-                                            <a href="mailto:info@neotech.com">
-                                                info@neotech.com
+                                            <a href="mailto:help@zentrolix.com">
+                                                help@zentrolix.com
                                             </a>
                                         </h6>
                                     </div>
                                 </div>
                                 <div class="pp-contact-info mb-0">
                                     <div class="pp-icon">
-                                        <i class="fa-solid fa-phone"></i>
+                                        <i class="fa-solid fa-location-dot"></i>
                                     </div>
                                     <div class="pp-content">
                                         <h6>
-                                            <a href="tel:+88012365478900">+880 123 654 789 00</a> <br>
-                                            <a href="tel:+001652069800">+001 6520 698 00</a>
+                                            Obispo Trejo 864, X5000 Córdoba
                                         </h6>
                                     </div>
                                 </div>
@@ -588,16 +571,16 @@
             <div class="footer-bottom3">
                 <div class="container">
                     <div class="pp-footer-bottom-wrapper">
-                        <p class="wow fadeInUp" data-wow-delay=".3s">Copyright© <b>Pixel-plus</b></p>
+                        <p class="wow fadeInUp" data-wow-delay=".3s">Copyright© <b>Zentrolix</b></p>
                         <ul class="pp-footer-list wow fadeInUp" data-wow-delay=".5s">
                             <li>
-                                <a href="contact.html">Terms & Conditions</a>
+                                <a href="#">Términos de uso</a>
                             </li>
                             <li>
-                                <a href="contact.html">Privacy Policy</a>
+                                <a href="#">Política de privacidad</a>
                             </li>
                             <li>
-                                <a href="contact.html">Contact Us</a>
+                                <a href="contact.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
