--- a/contact.html
+++ b/contact.html
@@ -438,6 +438,104 @@
                 </div>
             </div>
         </div>
+
+
+        <!-- Pp-Faq Section Start -->
+        <section class="faq-section section-padding pb-0 fix">
+            <div class="container">
+                <div class="pp-faq-wrapper">
+                    <div class="row g-4">
+                        <div class="col-lg-6">
+                            <div class="pp-faq-image">
+                                <img src="assets/img/inner-page/faq.png" alt="img">
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="pp-faq-content">
+                            <div class="faq-accordion mt-4 mt-md-0">
+                                <div class="accordion" id="accordion">
+                                    <div class="accordion-item mb-3 wow fadeInUp" data-wow-delay=".3s">
+                                       <h5 class="accordion-header">
+                                        <button class="accordion-button pt-0" type="button" data-bs-toggle="collapse" data-bs-target="#faq2" aria-expanded="false" aria-controls="faq2">
+                                            Custom Edit Tool Application
+                                        </button>
+                                       </h5>
+                                        <div id="faq2" class="accordion-collapse show" data-bs-parent="#accordion">
+                                            <div class="accordion-body">
+                                                Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam dolor semper faucibus.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item mb-3 wow fadeInUp" data-wow-delay=".5s">
+                                        <h5 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq1" aria-expanded="true" aria-controls="faq1">
+                                                Built In Safety Chat Mode
+                                            </button>
+                                        </h5>
+                                        <div id="faq1" class="accordion-collapse collapse" data-bs-parent="#accordion">
+                                            <div class="accordion-body">
+                                               Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam dolor semper faucibus.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item mb-3 wow fadeInUp" data-wow-delay=".3s">
+                                        <h5 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq3" aria-expanded="false" aria-controls="faq3">
+                                               Foster Trust Builds
+                                            </button>
+                                        </h5>
+                                        <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#accordion">
+                                            <div class="accordion-body">
+                                                Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam dolor semper faucibus.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item mb-3 wow fadeInUp" data-wow-delay=".5s">
+                                        <h5 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq4" aria-expanded="false" aria-controls="faq4">
+                                                Create Auto Layout
+                                            </button>
+                                        </h5>
+                                        <div id="faq4" class="accordion-collapse collapse" data-bs-parent="#accordion">
+                                            <div class="accordion-body">
+                                                Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam dolor semper faucibus.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item mb-3 wow fadeInUp" data-wow-delay=".3s">
+                                        <h5 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq5" aria-expanded="false" aria-controls="faq5">
+                                                Foster Trust Builds
+                                            </button>
+                                        </h5>
+                                        <div id="faq5" class="accordion-collapse collapse" data-bs-parent="#accordion">
+                                            <div class="accordion-body">
+                                               Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam dolor semper faucibus.
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="accordion-item wow fadeInUp" data-wow-delay=".5s">
+                                        <h5 class="accordion-header">
+                                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq6" aria-expanded="false" aria-controls="faq6">
+                                                Custom Edit Tool Application
+                                            </button>
+                                        </h5>
+                                        <div id="faq6" class="accordion-collapse collapse" data-bs-parent="#accordion">
+                                            <div class="accordion-body">
+                                               Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris nullam the as integer quam dolor semper faucibus.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+       
+          <!-- Pp Footer Section Start -->
        
           <!-- Pp Footer Section Start -->
         <footer class="pp-footer-section-2 bg-cover" style="background-image: url(assets/img/home-2/footer-bg.jpg);"> 
