итоговая структуру сайта

--- a/about.html
+++ b/about.html
@@ -659,6 +659,146 @@
             </div>
         </section>
        
+
+        <!-- Pp-Team Section Start -->
+        <section class="pp-project-details-section section-padding fix">
+            <div class="container">
+                <div class="pp-project-details-wrapper">
+                    <div class="row g-4">
+                        <div class="col-xl-12">
+                            <div class="pp-project-details-image">
+                                <img src="assets/img/inner-page/project/details-1.jpg" alt="img">
+                            </div>
+                        </div>
+                        <div class="row g-4">
+                            <div class="col-xl-4 col-lg-6 col-md-6">
+                                <div class="pp-details-box">
+                                    <div class="pp-content">
+                                        <h5>Sectors</h5>
+                                        <span>Roads & Highway</span>
+                                    </div>
+                                    <div class="pp-icon">
+                                        <img src="assets/img/inner-page/icon/01.svg" alt="img">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4 col-lg-6 col-md-6">
+                                <div class="pp-details-box">
+                                    <div class="pp-content">
+                                        <h5>Owner</h5>
+                                        <span>Some Comapny</span>
+                                    </div>
+                                    <div class="pp-icon">
+                                        <img src="assets/img/inner-page/icon/02.svg" alt="img">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-4 col-lg-6 col-md-6">
+                                <div class="pp-details-box">
+                                    <div class="pp-content">
+                                        <h5>Project Date</h5>
+                                        <span>Started: 2021 - Ending: 2023</span>
+                                    </div>
+                                    <div class="pp-icon">
+                                        <img src="assets/img/inner-page/icon/03.svg" alt="img">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pp-project-details-content">
+                            <h3>
+                                Project Description
+                            </h3>
+                            <p>
+                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary,, 
+                            </p>
+                            <p>
+                                ere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary,
+                            </p>
+                            <div class="pp-project-sideber">
+                                <div class="pp-sidebr-content">
+                                    <div class="pp-icon">
+                                        <img src="assets/img/inner-page/icon/04.svg" alt="img">
+                                    </div>
+                                    <p>
+                                        And the day came when the risk to remain tight in a bud
+                                        was more painful than the risk it took to blossom.
+                                    </p>
+                                </div>
+                                <h3>
+                                    <a href="project-details.html">– BILLI REUSS</a>
+                                </h3>
+                            </div>
+                            <h3>
+                                The Result
+                            </h3>
+                            <p>
+                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary,, 
+                            </p>
+                            <p>
+                                ere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary,
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="pp-instagram-wrapper">
+                <div class="swiper pp-instagram-banner-slider">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="pp-instagram-banner-items">
+                                <div class="pp-banner-image">
+                                    <img src="assets/img/inner-page/instagram/01.jpg" alt="insta-img">
+                                    <a href="index.html" class="icon">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="pp-instagram-banner-items">
+                                <div class="pp-banner-image">
+                                    <img src="assets/img/inner-page/instagram/02.jpg" alt="insta-img">
+                                    <a href="index.html" class="icon">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="pp-instagram-banner-items">
+                                <div class="pp-banner-image">
+                                    <img src="assets/img/inner-page/instagram/03.jpg" alt="insta-img">
+                                    <a href="index.html" class="icon">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="pp-instagram-banner-items">
+                                <div class="pp-banner-image">
+                                    <img src="assets/img/inner-page/instagram/04.jpg" alt="insta-img">
+                                    <a href="index.html" class="icon">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="pp-instagram-banner-items">
+                                <div class="pp-banner-image">
+                                    <img src="assets/img/inner-page/instagram/05.jpg" alt="insta-img">
+                                    <a href="index.html" class="icon">
+                                        <i class="fa-brands fa-instagram"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
           <!-- Pp Footer Section Start -->
         <footer class="pp-footer-section-2 bg-cover" style="background-image: url(assets/img/home-2/footer-bg.jpg);"> 
             <div class="container">
