--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                         <i class="far fa-phone"></i>
                                     </div>
                                     <div class="offcanvas__contact-text">
-                                        <a href="tel:+11002345909">+11002345909</a>
+                                        <a href="tel:+5435146789012">+54 351 467-8901</a>
                                     </div>
                                 </li>
                             </ul>
@@ -597,30 +597,30 @@
                                     </div>
                                 </div>
                                 <div class="pp-comment-form-wrap pt-5">
-                                    <h3>Leave a comments</h3>
-                                    <form action="#" id="contact-form" method="POST">
+                                    <h3>Déjanos tu comentario</h3>
+                                    <form id="contact-form">
                                         <div class="row g-4">
                                             <div class="col-lg-6">
                                                 <div class="form-clt">
-                                                    <span>Your Name*</span>
-                                                    <input type="text" name="name" id="name" placeholder="Your Name">
+                                                    <span>Tu Nombre*</span>
+                                                    <input type="text" name="name" id="name" placeholder="Tu nombre">
                                                 </div>
                                             </div>
                                             <div class="col-lg-6">
                                                 <div class="form-clt">
-                                                    <span>Your Email*</span>
-                                                    <input type="text" name="email" id="email6" placeholder="Your Email">
+                                                    <span>Tu Email*</span>
+                                                    <input type="email" name="email" id="email6" placeholder="Tu email">
                                                 </div>
                                             </div>
                                             <div class="col-lg-12">
                                                 <div class="form-clt">
-                                                    <span>Message*</span>
-                                                    <textarea name="message" id="message" placeholder="Type your message"></textarea>
+                                                    <span>Mensaje*</span>
+                                                    <textarea name="message" id="message" placeholder="Escribe tu mensaje"></textarea>
                                                 </div>
                                             </div>
                                             <div class="col-lg-6">
-                                               <button type="submit" class="pp-theme-btn">
-                                                    Discover More <i class="fa-solid fa-arrow-right-long"></i>
+                                               <button type="button" class="pp-theme-btn" onclick="handleIndexContactForm()">
+                                                    Enviar Comentario <i class="fa-solid fa-arrow-right-long"></i>
                                                 </button>
                                             </div>
                                         </div>
